# Standard-Balance-Chassis-2024

./: .cproject  .mxproject  .project  CMakeLists.txt  Chassis_H7.ioc  Chassis_H7.jdebug  README.md  UI列表.txt  操作手键位.md
Core/Inc/: stm32h7xx_hal_conf.h  stm32h7xx_it.h  tim.h
Core/Src/: dma.c  fdcan.c  gpio.c  iwdg.c  main.c  spi.c  stm32h7xx_it.c  tim.c  usart.c
HW-Components/: .gitmodules  CMakeLists.txt  Doxyfile  README.md  config.cmake
HW-Components-Referee/HW-Components-Referee-1.6.1/: CMakeLists.txt  README.md
HW-Components-Referee/HW-Components-Referee-1.6.1/inc/: referee.hpp  rfr_decoder.hpp  rfr_encoder.hpp  rfr_official_pkgs.hpp
HW-Components-Referee/HW-Components-Referee-1.6.1/inc/rfr_pkg/: rfr_id.hpp  rfr_pkg_0x0001_comp_status.hpp  rfr_pkg_0x0002_comp_result.hpp  rfr_pkg_0x0003_comp_robots_hp.hpp  rfr_pkg_0x0101_team_events.hpp  rfr_pkg_0x0102_team_suppliers.hpp  rfr_pkg_0x0104_team_warning.hpp  rfr_pkg_0x0105_team_dart_status.hpp  rfr_pkg_core.hpp  (+25 more)
HW-Components-Referee/HW-Components-Referee-1.6.1/prv/: rfr_crc.hpp
HW-Components-Referee/HW-Components-Referee-1.6.1/src/: rfr_crc.cpp  rfr_decoder.cpp  rfr_encoder.cpp  rfr_pkg_0x0301_inter_among_robots.cpp
HW-Components/algorithms/ahrs/: CMakeLists.txt
HW-Components/algorithms/ahrs/inc/: ahrs.hpp  ahrs_base.hpp  mahony.hpp
HW-Components/algorithms/ahrs/src/: ahrs_base.cpp  mahony.cpp
HW-Components/algorithms/controller/: CMakeLists.txt
HW-Components/algorithms/controller/base/: controller_base.hpp
HW-Components/algorithms/controller/pid/inc/: basic_pid.hpp  multi_nodes_pid.hpp  pid.hpp
HW-Components/algorithms/controller/pid/inc/pid_opt/: pid_opt.hpp  pid_opt_core.hpp  pid_opt_dead_band.hpp  pid_opt_diff_filter.hpp  pid_opt_diff_previous.hpp  pid_opt_inte_anti_windup.hpp  pid_opt_inte_changing_rate.hpp  pid_opt_inte_separation.hpp  pid_opt_inte_trapezoidal.hpp  pid_opt_outlimit.hpp  pid_opt_period_sub.hpp  pid_opt_setpoint_ramping.hpp
HW-Components/algorithms/controller/pid/src/: basic_pid.cpp  multi_nodes_pid.cpp
HW-Components/algorithms/filter/: CMakeLists.txt
HW-Components/algorithms/filter/inc/: filter.hpp  filter_base.hpp  fir.hpp  iir.hpp  td.hpp
HW-Components/algorithms/filter/prv/: queue.hpp
HW-Components/algorithms/filter/src/: fir.cpp  iir.cpp  td.cpp
HW-Components/algorithms/fsm/: CMakeLists.txt
HW-Components/algorithms/fsm/inc/: fsm.hpp
HW-Components/algorithms/fsm/src/: fsm.cpp
HW-Components/algorithms/ik_solver/chassis/: CMakeLists.txt
HW-Components/algorithms/ik_solver/chassis/inc/: chassis_iksolver.hpp
HW-Components/algorithms/ik_solver/chassis/prv/: chassis_iksolver_math.hpp
HW-Components/algorithms/ik_solver/chassis/src/: chassis_iksolver.cpp
HW-Components/algorithms/observer/: CMakeLists.txt
HW-Components/algorithms/observer/inc/: ekf.hpp  kalman.hpp  luenberger.hpp  observer.hpp  observer_base.hpp  ukf.hpp
HW-Components/algorithms/observer/src/: ekf.cpp  kalman.cpp  luenberger.cpp  observer_base.cpp  ukf.cpp
HW-Components/bsp/stm32_hal/: CMakeLists.txt  stm32_hal.cpp  stm32_hal.hpp
HW-Components/bsp/tick/: CMakeLists.txt  tick.cpp  tick.hpp
HW-Components/cmake/utils/: function_tools.cmake  tools.cmake
HW-Components/devices/: CMakeLists.txt
HW-Components/devices/buzzer/: CMakeLists.txt
HW-Components/devices/buzzer/inc/: buzzer.hpp
HW-Components/devices/buzzer/src/: buzzer.cpp
HW-Components/devices/imu/: CMakeLists.txt
HW-Components/devices/imu/inc/: BMI088.hpp  imu.hpp
HW-Components/devices/imu/prv/: BMI088_reg.hpp
HW-Components/devices/imu/src/: BMI088.cpp
HW-Components/devices/laser/: CMakeLists.txt
HW-Components/devices/laser/inc/: laser.hpp
HW-Components/devices/laser/src/: laser.cpp
HW-Components/devices/motor/: CMakeLists.txt
HW-Components/devices/motor/inc/: motor.hpp  motor_A1.hpp  motor_DM_J4310.hpp  motor_DM_J8006.hpp  motor_GM6020.hpp  motor_M2006.hpp  motor_M3508.hpp  motor_M8910.hpp  motor_MF9025v2.hpp  motor_base.hpp
HW-Components/devices/motor/src/: motor.cpp  motor_A1.cpp  motor_DM_J4310.cpp  motor_DM_J8006.cpp  motor_GM6020.cpp  motor_M2006.cpp  motor_M3508.cpp  motor_M8910.cpp  motor_MF9025v2.cpp  motor_base.cpp
HW-Components/devices/referee/: CMakeLists.txt
HW-Components/devices/referee/inc/: referee.hpp  referee_custom_define.hpp  referee_protocol.hpp  referee_rx_template.hpp  referee_ui.hpp
HW-Components/devices/referee/prv/: referee_crc.hpp  referee_size_check.hpp
HW-Components/devices/referee/src/: referee.cpp  referee_crc.cpp
HW-Components/devices/remote_control/: CMakeLists.txt
HW-Components/devices/remote_control/inc/: DT7.hpp
HW-Components/devices/remote_control/src/: DT7.cpp
HW-Components/devices/servo/: CMakeLists.txt
HW-Components/devices/servo/inc/: servo.hpp
HW-Components/devices/servo/src/: servo.cpp
HW-Components/tools/: CMakeLists.txt
HW-Components/tools/inc/: allocator.hpp  assert.hpp  base.hpp  construct.hpp  construct_prv.hpp  linked_list.hpp  system.hpp
HW-Components/tools/src/: tools.cpp
Resources/: HW_fdcan.cpp  HW_fdcan.hpp  chassis.cpp  chassis.hpp  chassis_gimbal_comm.c  chassis_gimbal_comm.h  chassis_motor.cpp  chassis_motor.hpp  chassis_music.hpp  dist_measure.cpp  dist_measure.hpp  filter.c  filter.h  five_rods_calc.c  five_rods_calc.h  judge.cpp  judge.hpp  missed_extern.h  motor_params.hpp  mpc_test.cpp  referee_data.cpp  referee_data.hpp  super_capacity.cpp  super_capacity.hpp  system.h  tools.h
Robot_config/: chassis_cmd_params.hpp  chassis_comm_params.hpp  chassis_ctrl_params.cpp  chassis_ctrl_params.hpp  chassis_detect_params.hpp  chassis_params.hpp  chassis_sense_params.hpp  chassis_switch_params.hpp
Robot_config/LQR_coff/: motor_3508_120mm.hpp  motor_8910_200mm.hpp
Tasks/: chassis_cmd_task.cpp  chassis_cmd_task.hpp  chassis_comm_task.cpp  chassis_comm_task.hpp  chassis_ctrl_task.cpp  chassis_ctrl_task.hpp  chassis_detect_task.cpp  chassis_detect_task.hpp  chassis_sense_task.cpp  chassis_sense_task.hpp  chassis_switch_task.cpp  chassis_switch_task.hpp  chassis_task.cpp  chassis_task.hpp  chassis_ui_task.cpp  chassis_ui_task.hpp
